Extract Library NNTPClientSession

--- a/nntp/CMakeLists.txt
+++ b/nntp/CMakeLists.txt
@@ -1,6 +1,3 @@
-add_executable(nntp-client 
-	main.cpp 
-	NNTPClientSession.h
-	NNTPClientSession.cpp
-)
-target_link_libraries(nntp-client PRIVATE Poco::Net)
+add_subdirectory(NNTPClientSession)
+add_subdirectory(nntp-dump)
+add_subdirectory(news-reader)
