--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.22)
-project(nntp)
+project(nntp-poco)
 
-find_package(Poco CONFIG REQUIRED Crypto Net NetSSLWin Util XML)
+#find_package(Poco CONFIG REQUIRED Crypto Net NetSSLWin Util XML)
+find_package(Poco CONFIG REQUIRED Net Util XML)
 
 if(NOT TARGET Poco::Net)
 	message(FATAL_ERROR "No Poco::Net target")
